# indra-os

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json  tsconfig.base.json
apps/api/: Dockerfile  pyproject.toml
apps/api/indra/: config.py  database.py  lightrag_ui.py  main.py  mcp_server.py  redis.py
apps/api/indra/core/: auth.py  events.py  exceptions.py  poller.py  telemetry.py
apps/api/indra/domains/aditya/amshah/: router.py
apps/api/indra/domains/aditya/aryamah/: router.py  schemas.py  service.py
apps/api/indra/domains/aditya/bhagah/: router.py  schemas.py  service.py
apps/api/indra/domains/aditya/dhata/: router.py
apps/api/indra/domains/aditya/mitrah/: router.py
apps/api/indra/domains/aditya/pushanah/: claude_env.py  router.py
apps/api/indra/domains/aditya/savita/: router.py  schemas.py  service.py
apps/api/indra/domains/indra/: router.py  schemas.py  service.py
apps/api/indra/middleware/: auth_gate.py  logging.py  security.py
apps/api/indra/migrations/: alembic.ini
apps/api/indra/migrations/alembic/: env.py
apps/api/indra/models/: __init__.py  agent.py  base.py  goal.py  knowledge.py  mcp_server.py  memory.py  notification.py  policy.py  project.py  schedule.py  session.py  task.py  trace.py  user.py  workflow.py  workspace.py
apps/api/indra/plugins/: __init__.py  base.py  manager.py
apps/api/indra/websockets/: manager.py  router.py
apps/api/tests/unit/: test_claude_code_reader.py  test_memory_service.py  test_middleware.py  test_pranah_service.py  test_trace_service.py
apps/web/: Dockerfile  (+5 more)
(+192 files in other folders)
